# ps-23s

./: LICENSE  README.md
task1/: .gitignore  CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.h  calculator_test.cpp  main.cpp
task2/: README.md  cases.txt  elements.py  evaluator.py  global_vars.py  main.py  printer.py  test.txt  test_list.txt  tests.py  transformer.py
task3/: .gitignore  CHANGELOG.md  README.md  task3.cabal  test-1.txt  test-2.txt  test-3.txt  test-4.txt  test.txt
task3/app/: Main.hs  Parser.hs  TextEditor.hs
