cabal-version:      2.4
name:               task3
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gallus Huber
maintainer:         e51905700@student.tuwien.ac.at

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable task3
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        TextEditor,
        Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        brick,
        bytestring,
        directory,
        filepath,
        lens,
        microlens,
        microlens-mtl,
        microlens-th,
        mtl,
        text,
        text-conversions,
        text-zipper,
        vector,
        vty
    ghc-options: -threaded -Wall -Wcompat -O2
    hs-source-dirs: app
    default-language: Haskell2010
